First results with the denoising autoencoder

--- a/Jan-29-Results-for-4-waveforms-with-Denoising-Autoencoder.ipynb
+++ b/Jan-29-Results-for-4-waveforms-with-Denoising-Autoencoder.ipynb
@@ -407,6 +407,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Figure 9. An example of denoised time series when there is no signal in the time series.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
