First results with the denoising autoencoder

--- a/Jan-29-Results-for-4-waveforms-with-Denoising-Autoencoder.ipynb
+++ b/Jan-29-Results-for-4-waveforms-with-Denoising-Autoencoder.ipynb
@@ -23,7 +23,7 @@
     "### 9. 4000 sky locations were generated randomly. Each of the 4000 waveforms was added to a different noise realisation, with the start of the waveform in the noise realisation being randomised.\n",
     "### 10. After step 9, there were 6000 time series: 4000 (noise realisations + signals) and 2000 (noise realisations).\n",
     "### 11. Each time series was then padded with 64 zeros at the beginning and 64 zeros at the end.\n",
-    "### 12. These time series were then whitened, split in segments so that the first segment contain the first 129 time stamps of the first time series, and the second segment contained the 2nd to 130th time stamps of the first waveform, and so on for all time series.\n",
+    "### 12. These time series were then whitened, split in segments so that the first segment contain the first 129 time stamps of the first time series, and the second segment contained the 2nd to 130th time stamps of the first timeseries, and so on for all time series.\n",
     "### 13. After step 12, there will be X segments, where X = the number of time series multiplied by the number of time stamps of each time series. Each segment contained 129 values.\n",
     "### 14. The segments in step 13 were then used as training/validation/test data, i.e. 80% of the segments used for training, 10% for validation, and 10% for testing.\n",
     "### 15. The target data were the noise free values at the middle of each segment.\n",
